refactor(return): enrich return enums and response actions
* CUSTOMER_RETURN:
- `CustomerReturnStatus.java`: Add rich enum serialization and guarded status parsing.
- `ReturnReasonCode.java`: Add rich enum serialization and guarded reason parsing.
- `CustomerReturnResponse.java`: Expose frontend actions as dedicated action objects.
- `CustomerReturnActionResponse.java`: Add response payload for valid customer return actions.
- `CustomerReturnMapper.java`: Split mapping into focused helper methods and centralize action mapping.
- `CustomerReturnRequest.java`: Clean validation messages.
- `CustomerReturnItemRequest.java`: Clean validation messages.

* SUPPLIER_RETURN:
- `SupplierReturnStatus.java`: Add rich enum serialization and guarded status parsing.
- `SupplierReturnReason.java`: Add rich enum serialization and guarded reason parsing.
- `SupplierReturnResponse.java`: Return status as a rich enum object and expose valid actions.
- `SupplierReturnActionResponse.java`: Add response payload for valid supplier return actions.
- `SupplierReturnMapper.java`: Split mapping into focused helper methods and map nested response data.
- `SupplierReturnRequest.java`: Clean validation messages.
- `SupplierReturnItemRequest.java`: Clean validation messages.
- `SupplierReturnInspectionRequest.java`: Clean validation messages.